--- a/www/wordpress/css/students.sass
+++ b/www/wordpress/css/students.sass
@@ -34,6 +34,8 @@ body.students
 
   #materials
     padding-bottom: 0
+    .img-wrapper
+      max-width: 450px
 
   .card-inner
     @extend .white-bg
